Release Vev 1.0.0 for JDK 27 and PostgreSQL 18 (#8)